# FastAPI-Project

backend/: .env  pyproject.toml
backend/app/: main.py
backend/app/api/: tasks.py
backend/app/core/: auth.py  clerk.py  config.py
backend/app/models/: task.py
backend/app/schemas/: task.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: KanbanBoard.tsx  Layout.tsx
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  PricingPage.tsx  SignInPage.tsx  SignUpPage.tsx
